# wcrn

./: CMakeLists.txt  Cargo.toml
examples/: main.c
examples/test_data/: sample.wasm  sample.wat  stack-table.msgpack
include/: wcrn.h
src/: capi.rs  lib.rs
src/core/: mod.rs  stack_tables.rs
